Fix build.gradle mainClass.set